--- a/block/baikal/__content/__content-text/baikal__content-text.css
+++ b/block/baikal/__content/__content-text/baikal__content-text.css
@@ -1,9 +1,17 @@
 .baikal__content-text {
-    width: 360px;
+    max-width: 360px;
     margin: 0 auto;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
+}
+
+@media (max-width: 437px) {
+    .baikal__content-text {
+        font-size: 10px;
+        line-height: 12px;
+        max-width: 270px;
+    }
 }
 
 @media (max-width: 320px) {
