--- a/block/baikal/__content/__content-header/baikal__content-header.css
+++ b/block/baikal/__content/__content-header/baikal__content-header.css
@@ -1,10 +1,18 @@
 .baikal__content-header {
-    width: 560px;
+    max-width: 560px;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     margin: 0 auto;
     align-self: end;
+}
+
+@media (max-width: 437px) {
+    .baikal__content-header {
+        font-size: 20px;
+        line-height: 20px;
+        max-width: 250px;
+    }
 }
 
 @media (max-width: 320px) {
