--- a/block/description/description.css
+++ b/block/description/description.css
@@ -17,18 +17,24 @@
 
 @media (max-width: 768px) {
     .description {
-        max-width: 720px;
-        width: 100%;
-        height: 428px;
-        margin: 0 24px 88px;
+        margin: 0 0 88px 24px;
+    }
+}
+
+@media (max-width: 720px) {
+    .description {
+        max-width: 500px;
+    }
+}
+
+@media (max-width: 528px) {
+    .description {
+        max-width: 300px;
     }
 }
 
 @media (max-width: 320px) {
     .description {
-        max-width: 288px;
-        width: 100%;
-        height: 752px;
-        margin: 0 16px 64px;
+        margin: 0 auto 64px;
     }
 }
