--- a/block/footer/__name/footer__name.css
+++ b/block/footer/__name/footer__name.css
@@ -5,6 +5,19 @@
     color: white;
 }
 
+@media (max-width: 470px) {
+    .footer__name {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 350px) {
+    .footer__name {
+        font-size: 7px;
+        line-height: 14px;
+    }
+}
+
 @media (max-width: 320px) {
     .footer__name {
         line-height: 14px;
