--- a/block/footer/__navigation/footer__navigation.css
+++ b/block/footer/__navigation/footer__navigation.css
@@ -9,6 +9,19 @@
     font-size: 16px;
     line-height: 18px;
     font-kerning: auto;
+    height: fit-content;
+}
+
+@media (max-width: 470px) {
+    .footer__navigation {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 350px) {
+    .footer__navigation {
+        font-size: 10px;
+    }
 }
 
 @media (max-width: 320px) {
