--- a/block/gallery/__images/gallery__images-img.css
+++ b/block/gallery/__images/gallery__images-img.css
@@ -2,12 +2,15 @@
     max-width: 284px;
     height: 213px;
     width: 100%;
+    object-fit: cover;
 }
 
 @media (max-width: 1024px) {
     .gallery__images-img {
         max-width: 300px;
         height: 225px;
+        width: 100%;
+        object-fit: cover;
     }
 }
 
@@ -15,6 +18,8 @@
     .gallery__images-img {
         max-width: 352px;
         height: 264px;
+        width: 100%;
+        object-fit: cover;
     }
 }
 
@@ -22,5 +27,7 @@
     .gallery__images-img {
         max-width: 288px;
         height: 216px;
+        width: 100%;
+        object-fit: cover;
     }
 }
