--- a/block/intro/__header/__header-text/intro__header-text.css
+++ b/block/intro/__header/__header-text/intro__header-text.css
@@ -13,6 +13,15 @@
     }
 }
 
+@media (max-width: 600px) {
+    .intro__header-text {
+        margin: 0 auto 56px;
+        font-size: 20px;
+        max-width: 300px;
+        height: 72px;
+    }
+}
+
 @media (max-width: 320px) {
     .intro__header-text {
         max-width: 288px;
