--- a/block/places/__card/__card-header/places__card-header.css
+++ b/block/places/__card/__card-header/places__card-header.css
@@ -11,7 +11,13 @@
     .places__card-header {
         font-size: 42px;
         line-height: 46px;
-        width: 320px;
+        max-width: 320px;
+    }
+}
+
+@media (max-width: 486px) {
+    .places__card-header {
+        max-width: 200px;
     }
 }
 
@@ -21,7 +27,6 @@
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
-        width: 100%;
         margin: 0 auto;
     }
 }
