--- a/block/places/places.css
+++ b/block/places/places.css
@@ -1,7 +1,7 @@
 @import url("__card/places__card.css");
 
 .places {
-    height: fit-content;
+    max-height: fit-content;
     max-width: 984px;
     width: 100%;
     margin: 0 auto 92px;
