--- a/page/style.css
+++ b/page/style.css
@@ -21,10 +21,20 @@ body {
      background-color: #2A2C2F;
 }
 
+@media (max-width: 1024px) {
+    .page {
+        max-width: 1024px;
+    }
+}
+
 @media (max-width: 768px) {
     .page {
         max-width: 768px;
-        width: 100%;
-        margin: 0 auto;
+    }
+}
+
+@media (max-width: 320px) {
+    .page {
+        max-width: 320px;
     }
 }
