--- a/block/baikal/baikal.css
+++ b/block/baikal/baikal.css
@@ -2,39 +2,14 @@
 
 .baikal {
     display: flex;
-    max-width: 1184px;
-    width: 100%;
-    height: 740px;
     margin: 0 auto 92px;
     background-image: url("../../assets/baikal__background.png");
     background-size: cover;
     align-items: center;
     justify-content: center;
     text-align: center;
+    background-position: center;
+    max-width: 1184px;
+    max-height: 740px;
 }
 
-@media (max-width: 1024px) {
-    .baikal {
-        max-width: 1024px;
-        width: 100%;
-        height: 640px;
-    }
-}
-
-@media (max-width: 768px) {
-    .baikal {
-        max-width: 768px;
-        width: 100%;
-        height: 480px;
-        margin: 0 auto 88px;
-    }
-}
-
-@media (max-width: 320px) {
-    .baikal {
-        max-width: 320px;
-        width: 100%;
-        height: 200px;
-        margin: 0 auto 64px;
-    }
-}
