--- a/block/places/__card/__card-header/places__card-header.css
+++ b/block/places/__card/__card-header/places__card-header.css
@@ -27,6 +27,6 @@
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
-        margin: 0 auto;
+        margin-left: 16px;
     }
 }
