--- a/block/places/places.css
+++ b/block/places/places.css
@@ -7,6 +7,11 @@
     margin: 0 auto 92px;
 }
 
+@media (max-width: 1024px) {
+    .places {
+    }
+}
+
 @media (max-width: 768px) {
     .places {
         margin: 0 auto 88px;
