--- a/block/places/__card/__card-text/__card-paragraph1/places__card-paragraph1.css
+++ b/block/places/__card/__card-text/__card-paragraph1/places__card-paragraph1.css
@@ -1,3 +1,9 @@
 .places__card-paragraph1 {
     margin: 0 0 24px;
 }
+
+@media (max-width: 486px) {
+    .places__card-paragraph1 {
+        margin: 0 0 12px;
+    }
+}
