--- a/block/baikal/__content/__content-header/baikal__content-header.css
+++ b/block/baikal/__content/__content-header/baikal__content-header.css
@@ -7,9 +7,16 @@
     align-self: end;
 }
 
-@media (max-width: 437px) {
+@media (max-width: 486px) {
     .baikal__content-header {
         font-size: 50px;
+        line-height: 45px;
+    }
+}
+
+@media (max-width: 360px) {
+    .baikal__content-header {
+        font-size: 40px;
     }
 }
 
