--- a/block/baikal/__content/baikal__content.css
+++ b/block/baikal/__content/baikal__content.css
@@ -29,6 +29,13 @@
     }
 }
 
+@media (max-width: 486px) {
+    .baikal__content {
+        grid-template-rows: 150px 120px;
+        grid-gap: 16px;
+    }
+}
+
 @media (max-width: 320px) {
     .baikal__content {
         grid-template-rows: 103px 81px;
