--- a/block/footer/__navigation/footer__navigation.css
+++ b/block/footer/__navigation/footer__navigation.css
@@ -24,6 +24,13 @@
     }
 }
 
+@media (max-width: 486px) {
+    .footer__navigation {
+        height: 150px;
+        font-size: 15px;
+    }
+}
+
 @media (max-width: 320px) {
     .footer__navigation {
         display: flex;
