--- a/block/places/__card/__card-image/places__card-image.css
+++ b/block/places/__card/__card-image/places__card-image.css
@@ -7,6 +7,7 @@
     .places__card-image {
         width: 440px;
         height: 440px;
+        align-self: start;
     }
 }
 
@@ -18,17 +19,33 @@
     }
 }
 
+@media (max-width: 660px) {
+    .places__card-image {
+        max-width: 250px;
+        height: 250px;
+        align-self: start;
+    }
+}
+
 @media (max-width: 486px) {
     .places__card-image {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
+    }
+}
+
+@media (max-width: 350px) {
+    .places__card-image {
+        width: 180px;
+        height: 180px;
     }
 }
 
 @media (max-width: 320px) {
     .places__card-image {
         grid-area: image;
-        width: 320px;
+        max-width: 320px;
         height: 320px;
+        width: 100%;
     }
 }
