--- a/block/places/__card/__card-website/__card-url/places__card-url.css
+++ b/block/places/__card/__card-website/__card-url/places__card-url.css
@@ -5,3 +5,10 @@
     color: #AAAAAA;
     margin: 0 0 12px;
 }
+
+@media (max-width: 486px) {
+    .places__card-url {
+        font-size: 10px;
+        margin: 15px 0 0;
+    }
+}
