--- a/block/places/places.css
+++ b/block/places/places.css
@@ -18,6 +18,12 @@
     }
 }
 
+@media (max-width: 468px) {
+    .places {
+        margin: 0 auto 50px;
+    }
+}
+
 @media (max-width: 320px) {
     .places {
         margin: 0 auto 64px;
