--- a/page/style.css
+++ b/page/style.css
@@ -8,7 +8,8 @@
 @import url("../block/footer/footer.css");
 @font-face {
     font-family: 'Inter', sans-serif;
-    src: url("../fonts/Inter/Inter-VariableFont_slnt,wght.ttf") format("truetype");
+    src: local('Inter'),
+    url("../fonts/Inter/Inter-VariableFont_slnt,wght.ttf") format("truetype");
     font-style: normal;
 }
 
