--- a/page/style.css
+++ b/page/style.css
@@ -9,7 +9,7 @@
 @import url("../block/footer/footer.css");
 
 body {
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     background-color: #2A2C2F;
     -webkit-font-smoothing: antialiased;
     font-weight: 400;
